--- a/FlixApplication/Base.lproj/Main.storyboard
+++ b/FlixApplication/Base.lproj/Main.storyboard
@@ -141,7 +141,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ogD-Oz-LW8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2610.4000000000001" y="33.733133433283363"/>
+            <point key="canvasLocation" x="2793" y="549"/>
         </scene>
         <!--Now Playing-->
         <scene sceneID="bZe-wb-8Hv">
@@ -152,6 +152,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qpI-o3-p3g">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -216,6 +219,7 @@
                                         </view>
                                         <connections>
                                             <outlet property="posterImageView" destination="aMy-y6-iut" id="MuZ-ma-iPl"/>
+                                            <segue destination="Nx3-d9-k6b" kind="show" id="Hp0-N2-RqA"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -242,6 +246,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Jyo-jQ-kUi">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="32"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -257,4 +264,7 @@
         <image name="now_playing_tabbar_item" width="21" height="21"/>
         <image name="superhero_tabbar_item" width="21" height="23"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="eRS-sY-tDJ"/>
+    </inferredMetricsTieBreakers>
 </document>
